[package]
edition = "2021"
name = "monoio-tls-example"
version = "0.1.0"

[dependencies]
monoio = {version = "0.0.8"}
rustls = {version = "0.20", features = ["tls12"]}
rustls-pemfile = "1"
webpki-roots = "0.22"

monoio-rustls = {version = "0.0.5", path = "../monoio-rustls", features = ["tls12"]}

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
