[package]
name = "monoio-tls-example"
version = "0.3.0"

authors = ["ChiHai <ihciah@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
monoio = { workspace = true }

# rustls
rustls = { version = "0.21", features = ["tls12"] }
rustls-pemfile = "1"
monoio-rustls = { path = "../monoio-rustls", features = ["tls12"] }

# native-tls
native-tls = { version = "0.2" }
monoio-native-tls = { path = "../monoio-native-tls" }

[[bin]]
name = "server-rustls"
path = "src/server-rustls.rs"

[[bin]]
name = "client-rustls"
path = "src/client-rustls.rs"

[[bin]]
name = "server-native"
path = "src/server-native.rs"

[[bin]]
name = "client-native"
path = "src/client-native.rs"
