[package]
name = "monoio-nativetls"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1" }
monoio = "0.1.2"
monoio-common = { path = "../monoio-common" }
native-tls = "0"
openssl-sys = "0"
openssl = "0"
thiserror = { version = "1" }
anyhow = "1"
async-recursion = "1"
tracing = { version = "0.1", optional = true }

[features]
default = ["logging"]
logging = ["tracing"]
qat = []
unsafe_io = ["monoio-common/unsafe_io"]
